fix: cover sticky header 1px gap

--- a/src/component/reader/header/header.sass
+++ b/src/component/reader/header/header.sass
@@ -11,6 +11,7 @@
   align-items: center
   justify-content: space-between
   border-bottom: $dark-border
+  box-shadow: 0 -1px 0 0 #fff
   @media (display-mode: standalone)
     background-color: #fff
   > div
